# bump

./: .doxygen  .gitignore  Cargo.toml  Doxyfile  LICENSE  README.md  meson.build  xmake.lua
.github/workflows/: ci.yml  rust.yml
.zed/: settings.json
src/: .clang-format  Bump.h  ShallowWater.cpp  ShallowWater.h  bernoulli.h  bump.cpp  bump.rs  cubic.cpp  cubic.h  driver.cpp  geometry.h  main.rs  shallow_water.rs  subcritical.cpp  subcritical.h  transcritical.cpp  transcritical.h
